--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </div>
 
   <script>
-    consoleText(['Hello World.', 'Console Text', 'Made with Love.'], 'text', ['tomato', 'rebeccapurple', 'lightblue']);
+    consoleText(['Labrīt.', 'Priecīgus Ziemīšus,', 'Laimīgu jauno gadu.'], 'text', ['tomato', 'rebeccapurple', 'lightblue']);
 
     function consoleText(words, id, colors) {
       if (colors === undefined) colors = ['#fff'];
