--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </div>
 
   <script>
-    consoleText(['Labrīt.', 'Priecīgus Ziemīšus,', 'Laimīgu jauno gadu.'], 'text', ['tomato', 'rebeccapurple', 'lightblue']);
+    consoleText(['Labrīt.', 'Priecīgus Ziemīšus,', 'Laimīgu jauno gadu.'], 'text', ['teal', 'salmon', 'white']);
 
     function consoleText(words, id, colors) {
       if (colors === undefined) colors = ['#fff'];
